fix changes into local repo

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,8 +5,12 @@
 }
 
 body {
-  width: 1100px;
-  margin: 0 auto;
+  
+height: 105px;
+left: 454px;
+gap: 0px;
+opacity: 0px;
+
   font-family: Raleway, sans-serif;
 }
 
