--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,521 @@
-/* место для вашего кода */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.glavnaya__section {
+    max-width: 1440px;
+    margin: auto;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    margin: 92px 24px 96px 24px;
+}
+
+.header__links-list {
+    display: flex;
+    align-items: center;
+    gap: 10px 33px;
+    list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+}
+
+.header__link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: normal;
+    text-underline-offset: 5px;
+    transition: text-underline-offset 0.3s ease;
+}
+
+.header__link:hover {
+    text-underline-offset: 7px;
+}
+
+.header__link_active {
+    text-decoration: none;
+}
+
+.header__logo {
+    display: block;
+    justify-self: center;
+    width: 148px;
+    height: 105px;
+    transition: transform 0.3s ease;
+}
+
+.header__logo:hover {
+    transform: scale(1.03);
+}
+
+.header__logo-image {
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.header__address {
+    justify-self: end;
+}
+
+
+
+
+.cover {
+    position: relative;
+    z-index: 1;
+    padding: 173px 50px 50px 50px;
+    color: #fff;
+    background-color: #a7a7a7;
+    background-image: url("../images/cover.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.cover__title {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+    margin-bottom: 135px;
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 100%;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 60px;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.cover__description-text {
+    margin-right: 80px;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+    word-spacing: 18px;
+}
+
+.cover {
+    position: relative;
+    z-index: 1;
+    padding: 173px 50px 50px 50px;
+    color: #fff;
+    background-color: #a7a7a7;
+    background-image: url("../images/cover.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.cover__title {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+    margin-bottom: 135px;
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 100%;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.cover__description-text {
+    margin-right: 80px;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+    word-spacing: 18px;
+}
+
+.lots {
+    display: flex;
+    flex-direction: column;
+   
+
+
+}
+
+.lots__heading {
+    margin-bottom: 27px;
+    margin-left: 94px;
+    padding-top: 179px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: normal;
+    text-transform: uppercase;
+
+}
+
+.lots__card-list {
+    display: flex;
+    margin-right: 24px;
+    margin-left: 24px;
+    list-style: none;
+
+}
+
+.lots__card-list-item {
+    flex: 1 1 430px;
+    flex-grow: 1;
+    min-height: 450px;
+    margin-left: 24px;
+    width: 334px;
+    height: 563px;
+}
+
+.lots__look-more-link {
+    margin-top: 30px;
+    margin-left: 90px;
+    font-size: 20px;
+    padding-bottom: 146px;
+    text-underline-offset: 5px;
+    
+}
+
+.lots__look-more-link:hover {
+    text-underline-offset: 7px;
+}
+
+
+.etter-spacing-extended {
+    letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+    letter-spacing: normal;
+}
+
+.aligned-text,
+.aligned-text_center,
+.aligned-text_right {
+    display: block;
+}
+
+.aligned-text {
+    text-align: left;
+}
+
+.aligned-text_center {
+    text-align: center;
+}
+
+.aligned-text_right {
+    text-align: right;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.address {
+    max-width: 238px;
+    font-weight: 400;
+    font-size: 18px;
+    font-style: normal;
+    line-height: 24.3px;
+}
+
+.bet-button {
+    border: 1px solid #fff;
+    padding: 12px 32px;
+    color: inherit;
+    font-family: "Raleway", sans-serif;
+    font-size: 22px;
+    line-height: normal;
+    text-align: center;
+    text-transform: uppercase;
+    background: transparent;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.bet-button:hover {
+    transform: scale(1.03);
+}
+
+.card-link {
+    display: block;
+    width: 334px;
+    height: 563px;
+    text-decoration: none;
+    transition: transform 0.3s ease;
+}
+
+.card-link:hover {
+    transform: translateY(-5px);
+}
+
+.card {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 50px 40px;
+    color: #fff;
+}
+
+.card_type_film,
+.card_type_book,
+.card_type_picture {
+    background-color: #a7a7a7;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+}
+
+.card_type_film {
+    background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+    background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+    background-image: url("../images/card-lot-03.jpg");
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 120%;
+    text-decoration: underline;
+    text-transform: uppercase;
+}
+
+.card__text {
+    margin-top: auto;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+}
+
+.card-link {
+
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    transition: transform 0.3s ease;
+}
+
+.card-link:hover {
+    transform: translateY(-5px);
+}
+
+.card {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 50px 40px;
+    color: #fff;
+}
+
+.card_type_film,
+.card_type_book,
+.card_type_picture {
+    background-color: #a7a7a7;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.card_type_film {
+    background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+    background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+    background-image: url("../images/card-lot-03.jpg");
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 120%;
+    text-decoration: underline;
+    text-transform: uppercase;
+}
+
+.card__text {
+    margin-top: auto;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+}
+
+.about {
+    display: flex;
+    margin: 0 auto 180px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 146px
+}
+
+.about__column {
+    background: black;
+   border-radius: 50%;
+    height: 240px;
+    width: 240px;
+    margin-left: 95px;
+    margin-right: 120px;
+}
+
+.img {
+    overflow-clip-margin: content-box;
+    overflow: clip;
+    
+}
+
+.about__title {
+    font-size: 40px;
+    font-style: normal;
+    line-height: normal;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-top: 100px;
+}
+
+.about__paragraph {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    padding-top: 100px;
+}
+
+.about__paragraph-text {
+    font-size: 20px;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: normal;
+}
+
+
+.about__logo {
+    width: 148px;
+    height: 114px;
+    margin: 63px 46px;
+}
+
+
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 91px;
+    padding-top: 178px;
+    margin-left: 50PX;
+    margin-right: 50px;
+    list-style-type: none;
+}
+
+.address {
+    font-size: 18px;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    line-height: 24.30px;
+    text-underline-position: under;
+    font-style: normal; 
+}
+
+.nav {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+
+
+.footer__address-link:hover {
+    text-underline-offset: 7px;
+}
+
+.footer__menu-list {
+    text-align: center;
+    list-style: none;
+}
+
+.footer__menu-link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: normal;
+    text-underline-offset: 2px;
+    transition: text-underline-offset 0.3s ease;
+}
+
+.footer__menu-link:hover {
+    text-underline-offset: 4px;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-link {
+    display: block;
+    width: 48px;
+    height: 48px;
+    transition: transform 0.3s ease;
+}
+
+
+
+.footer__social-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-self: end;
+    align-items: center;
+    gap: 20px 48px;
+    max-width: 240px;
+    list-style: none;
+    padding-bottom: 139px;
+}
+   
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+    display: flex;
+    column-gap: 50px;
+    list-style: none;
+    
+}
+
+
+
