--- a/styles/global.css
+++ b/styles/global.css
@@ -4,14 +4,12 @@
   box-sizing: border-box;
 }
 
-body {
-  
-height: 105px;
-left: 454px;
-gap: 0px;
-opacity: 0px;
 
-  font-family: Raleway, sans-serif;
+
+body {
+width: 1100px;
+margin: 0 auto;  
+font-family: Raleway, sans-serif;
 }
 
 h1,
