--- a/styles/style.css
+++ b/styles/style.css
@@ -92,10 +92,6 @@
   text-transform: uppercase;
 }
 
-.letter-spacing-extended {
-  letter-spacing: 60px;
-}
-
 .cover__description {
   display: flex;
   justify-content: flex-end;
@@ -114,9 +110,7 @@
 
 .lots {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
-  max-width: 1052px;
 }
 
 .lots__heading {
@@ -134,6 +128,8 @@
   flex-wrap: wrap;
   gap: 24px;
   list-style: none;
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 .lots__card-list-item {
@@ -162,13 +158,8 @@
   letter-spacing: normal;
 }
 
-.aligned-text,
-.aligned-text_center,
-.aligned-text_right {
-  display: block;
-}
-
 .aligned-text {
+  display: block;
   text-align: left;
 }
 
@@ -222,6 +213,8 @@
   min-height: 563px;
   text-decoration: none;
   transition: transform 0.3s ease;
+  width: 100%;
+  height: 100%;
 }
 
 .card-link:hover {
@@ -237,11 +230,6 @@
   height: 100%;
   padding: 50px 40px;
   color: #fff;
-}
-
-.card_type_film,
-.card_type_book,
-.card_type_picture {
   background-color: #a7a7a7;
   background-repeat: no-repeat;
   background-position: center;
@@ -275,37 +263,6 @@
   line-height: 120%;
 }
 
-.card-link {
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  transition: transform 0.3s ease;
-}
-
-.card-link:hover {
-  transform: translateY(-5px);
-}
-
-.card {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  padding: 50px 40px;
-  color: #fff;
-}
-
-.card_type_film,
-.card_type_book,
-.card_type_picture {
-  background-color: #a7a7a7;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
 .card_type_film {
   background-image: url("../images/card-lot-01.jpg");
 }
@@ -316,21 +273,6 @@
 
 .card_type_picture {
   background-image: url("../images/card-lot-03.jpg");
-}
-
-.card__title {
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 120%;
-  text-decoration: underline;
-  text-transform: uppercase;
-}
-
-.card__text {
-  margin-top: auto;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 120%;
 }
 
 .about {
@@ -373,7 +315,6 @@
 }
 
 .about__paragraph-text {
-  display: flex;
   font-size: 20px;
   font-family: Raleway, sans-serif;
   font-weight: 400;
@@ -400,13 +341,14 @@
   padding-top: 80px;
 }
 
-.address {
+.information {
   font-size: 18px;
   font-family: Raleway, sans-serif;
   font-weight: 400;
   line-height: 24.3px;
   text-underline-position: under;
   font-style: normal;
+  max-width: 238px;
 }
 
 .nav {
@@ -431,18 +373,12 @@
   transition: text-underline-offset 0.3s ease;
 }
 
-.footer__menu-link:hover {
-  text-underline-offset: 4px;
-}
-
 .footer__menu-link_active {
   text-decoration: none;
 }
 
 .footer__social-link {
   display: block;
-  width: 48px;
-  height: 48px;
   transition: transform 0.3s ease;
 }
 
@@ -450,14 +386,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-self: end;
-  align-items: center;
   gap: 20px 48px;
   list-style: none;
-  padding-bottom: 139px;
 }
 
 .footer__social-icon {
   width: 48px;
   height: 48px;
-  list-style: none;
 }
